# q1k

./: README.md  pyproject.toml  setup.py
.github/workflows/: check_linting.yml  pypi.yml  test_pipeline.yml
grands/: group_erp_tf_AEP.py  group_erp_tf_GO.py  group_erp_tf_PLR.py  group_erp_tf_RS.py  group_erp_tf_TO.py  group_erp_tf_VEP.py  group_erp_tf_VS.py
q1k/: __init__.py  bids.py  config.py  io.py  q1k_manager.py  slurm.py
q1k/analyses/: tools.py
q1k/autorej/: cli.py  pipeline.py
q1k/init/: cli.py  et_extraction.py  tools.py
q1k/notebooks/: analyses_GO.py  analyses_PLR.py  analyses_VEP.py  analyses_sample_size.py  init_report.py  segment_AEP.py  segment_GO.py  segment_PLR.py  segment_RS.py  segment_TO.py  segment_VEP.py  segment_VS.py  sync_loss_PLR.py  sync_loss_report.py  tracking_data_loss.py  tracking_pipeline.py
q1k/pylossless/: cli.py  pipeline.py
q1k/segment/: cli.py  tasks.py
q1k/slurm/: autorej_job.sh  pylossless_job.sh
q1k/sync_loss/: cli.py  tools.py
q1k/tracking/: cli.py  tools.py
q1k_dashboard/: Q1kpipeline_readme.txt  README.md  mhc_go_et_convert.py  q1k_manager.py
tests/: conftest.py  test_bids.py  test_cli.py  test_config.py  test_io.py  test_segment.py  test_slurm.py  test_tracking.py
