[build-system]
requires = ["setuptools>=64", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "q1k"
version = "0.1.0"
description = "Preprocessing pipeline for EEG/eye-tracking data from the Quebec 1000 Families project."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Christian O'Reilly", email = "christian.oreilly@sc.edu" },
    { name = "James Desjardins", email = "jim.a.desjardins@gmail.com" },
]

dependencies = [
    "mne>=1.0",
    "mne-bids>=0.12",
    "pylossless",
    "autoreject",
    "eyelinkio",
    "numpy",
    "pandas",
    "matplotlib",
    "plotly",
    "marimo",
    "tqdm",
    "python-docx",
    "openpyxl",
    "kaleido",
]

[project.optional-dependencies]
analyses = [
    "xarray",
    "dask",
    "seaborn",
    "scipy",
    "pybids",
]
test = ["pytest", "pytest-cov", "coverage"]
doc = ["sphinx"]

[project.urls]
Homepage = "https://github.com/lina-usc/q1k"

[project.scripts]
q1k-init = "q1k.init.cli:main"
q1k-pylossless = "q1k.pylossless.cli:main"
q1k-sync-loss = "q1k.sync_loss.cli:main"
q1k-segment = "q1k.segment.cli:main"
q1k-autorej = "q1k.autorej.cli:main"
q1k-tracking = "q1k.tracking.cli:main"

[tool.setuptools.packages.find]
include = ["q1k*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.codespell]
skip = "*.ipynb,*.html,*.css"
